--- a/_publish.yml
+++ b/_publish.yml
@@ -10,3 +10,5 @@
       url: 'https://quartopub.com/sites/leeolney3/chocolate-bar-ratings'
     - id: b8df77c9-0cb5-4b61-9595-18223474636c
       url: 'https://quartopub.com/sites/leeolney3/chocolate-bar-ratings'
+    - id: 65cc27dc-305e-44d1-8bb6-f7dc45d79e92
+      url: 'https://quartopub.com/sites/leeolney3/chocolate-bar-ratings'
